# fModMaster

./: .gitignore  README.md  fModMaster.ini  pyproject.toml
docs/: plan-formato-por-registrador.md
docs/qmodmaster/: QMODMASTER.md  STRUCTURE.md
src/fmodmaster/: app.py  bus_monitor.py  config.py  logging_helper.py  main.py  main_view.py  modbus_comm.py  registers.py  tools_view.py
tests/: test_app.py  test_bus_monitor.py  test_config.py  test_main_view.py  test_modbus_comm.py  test_modbus_comm_sim.py  test_registers.py  test_tools.py
